# cross-venue-latency-arb-simulator

./: README.md  pyproject.toml
docs/: limitations-and-regimes.md  math-model.md  recruiter-brief.md  research-note.md  validation-protocol.md
src/cross_venue_latency_arb_simulator/: __init__.py  arb.py
tests/: test_arb.py  test_research_docs_contract.py
